--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 line-bot-sdk==1.8.0
 flask==1.0.2
-flask-script==2.0.6
-flask-sQLAlchemy==2.4.0
-flask-migrate==2.5.2
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.0
+Flask-Migrate==2.5.2
 jieba==0.39
+SQLAlchemy==1.3.6
 gunicorn
